--- a/public/stylesheets/coursesIIT&Medical.css
+++ b/public/stylesheets/coursesIIT&Medical.css
@@ -356,7 +356,7 @@
     font-size: 17px;
 
 }
-.neet1btn, .neet2btn, .neet3btn, .neet4btn {
+.neet1btn, .neet2btn, .neet3btn, .neet4btn ,  .neet5btn  {
     padding:  0.5rem 2rem;
     border-radius: 20px;
     background-color: #526DF0;
