--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -58,30 +58,23 @@
         <img src="../images/aboutus/group19.png" class="book" alt="" />
         <div class="cards1">
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum is simply dummy text of the printing and
-            typesetting industry.
+          Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya Priyadharshini for securing NEET first mark in Salem Region in NEET 2020.
           </p>
         </div>
         <div class="cards2">
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum is simply dummy text of the printing and
-            typesetting industry.
+            Salem District Collector Mrs. Rohini has honoured our Student Ms.Elakkiya G for securing NEET first mark in Salem Region in NEET 2019.
           </p>
         </div>
         <div class="cards3">
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum is simply dummy text of the printing and
-            typesetting industry.
+            Salem District CEO Mrs. Gnanagowri has honoured our Student Mr.Sarathkumar for securing NEET first mark in Salem Region in NEET 2018.
+            
           </p>
         </div>
         <div class="cards4">
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum is simply dummy text of the printing and
-            typesetting industry.
+            48 Students got MBBS SEATS through Govt Quota in Tamilnadu Medical Counselling 2017.
           </p>
         </div>
       </section>
