--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -11,123 +11,30 @@
     <section class="bgmeth">
       <div class="methodology1">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
-        <h1>Course Methodology</h1>
+        <h1>Objective & Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span> Full day course from Monday to Saturday</li>
+          </svg></span>To focus on encouraging students to apply the concepts learnt in real life situations</li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Classes with proven faculties</li>
+          </svg></span>Course methodology is aimed at helping the students to understand the concepts thoroughly</li>
           <li>
             <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Daily test, Unit test, Unit Cumulative Test, Revision test, Full
-            length NEET Mock tests
+          </svg></span>It helps them develop a logical approach to Maths, Physics, Chemistry & Biology for an effective learning
           </li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
           </svg></span>Individual Mark Analysis</li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Attendance, Mark status update SMS to parents</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Interactive Doubt clearing sessions</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Problem solving session for each units</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Frequent Parent-teacher Meeting</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Exam tips and tricks, Motivational Sessions</li>
+          </svg></span>Overall it develops Analytical & Logical skills which are highly required for all competitive exams like NEET, JEE, CLAT, UPSC, etc.,</li>
+   
         </ul>
       </div>
     </section>
-    <section class="bgmeth2">
-      <div class="methodology2">
-        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
-        <h1>Course Methodology</h1>
-        <ul>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving </li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
-          <li>
-            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
-          </li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Solution booklets for problems in Study Material Books</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Individual Mark Analysis</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Interactive Doubt clearing sessions</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Problem solving session for each units</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Concept Capsules</li>
-      
-        </ul>
-      </div>
-    </section>
-    <section class="bgmeth3">
-      <div class="methodology3">
-        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
-        <h1>Course Methodology</h1>
-        <ul>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
-          <li>
-            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
-          </li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Solution booklets for problems in Study Material Books</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Individual Mark Analysis</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Interactive Doubt clearing sessions</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Problem solving session for each units</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Concept Capsules</li>
-        
-        </ul>
-      </div>
-    </section>
+
 
     <%- include('./layout/header') %>
 
@@ -153,12 +60,11 @@
       <div class="hex1 bg1">
         <img src="../images/courses/heximg1.png" alt="" />
         <div class="hexBox">
-          <h1 class="hexTitle">REPEATERS</h1>
+          <h1 class="hexTitle">6TH STD</h1>
           <p class="hexContent">
-            This course is meant for those who have completed their 12th class
-            board exams and might have already attempted the NEET. They will
-            appear for NEET in the coming year after one year of training
-            focused on NEET.
+            CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
+This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
+
           </p>
           <button class="neet1btn">Read more</button>
         </div>
@@ -168,11 +74,10 @@
       <div class="hex1 hex2 bg2">
         <img src="../images/courses/heximg11.png" alt="" />
         <div class="hexBox hexBox2">
-          <h1 class="hexTitle">Two-year course</h1>
+          <h1 class="hexTitle">7TH STD</h1>
           <p class="hexContent">
-            This course is meant for students who have completed their 10th std
-            board exams. The course will start at their 11th std and will be
-            conducted till their NEET exam. Course Methodology
+            CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
+This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
           </p>
           <button class="neet2btn">Read more</button>
         </div>
@@ -182,10 +87,10 @@
       <div class="hex1 bg3">
         <img src="../images/courses/heximg2.png" alt="" />
         <div class="hexBox">
-          <h1 class="hexTitle">One-year course</h1>
+          <h1 class="hexTitle">8TH STD</h1>
           <p class="hexContent">
-            The course is specifically designed for those who wish to focus on
-            NEET after completing their 11th class exams.
+            CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
+This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
           </p>
           <button class="neet3btn">Read more</button>
         </div>
@@ -195,13 +100,25 @@
       <div class="hex1 hex2 bg2">
         <img src="../images/courses/heximg3.png" alt="" />
         <div class="hexBox hexBox2">
-          <h1 class="hexTitle">Crash course</h1>
+          <h1 class="hexTitle">9TH STD</h1>
           <p class="hexContent">
-            This course is meant for those who are appearing for their 12th
-            class board exams and wish to focus on NEET after the Board exams.
-            These students will be attempting NEET the same year.
+            CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
+This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
           </p>
           <button class="neet4btn">Read more</button>
+        </div>
+      </div>
+    </section>
+    <section class="hexMain">
+      <div class="hex1 bg1">
+        <img src="../images/courses/heximg3.png" alt="" />
+        <div class="hexBox hexBox2">
+          <h1 class="hexTitle">10TH STD</h1>
+          <p class="hexContent">
+            CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
+This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
+          </p>
+          <button class="neet5btn">Read more</button>
         </div>
       </div>
     </section>
