--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -15,22 +15,27 @@
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span> Full day course from Monday to Saturday</li>
+          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving</li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Classes with proven faculties</li>
+          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
           <li>
             <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Daily test, Unit test, Unit Cumulative Test, Revision test, Full
-            length NEET Mock tests
+          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
           </li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Individual Mark Analysis</li>
+          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Attendance, Mark status update SMS to parents</li>
+          </svg></span>Solution booklets for problems in Study Material Books</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
           </svg></span>Interactive Doubt clearing sessions</li>
@@ -39,10 +44,8 @@
           </svg></span>Problem solving session for each units</li>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Frequent Parent-teacher Meeting</li>
-          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg></span>Exam tips and tricks, Motivational Sessions</li>
+          </svg></span>Concept Capsules</li>
+        
         </ul>
       </div>
     </section>
@@ -124,6 +127,9 @@
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
           </svg></span>Concept Capsules</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Study Materials- 15</li>
         
         </ul>
       </div>
@@ -151,14 +157,13 @@
    
     <section class="hexMain">
       <div class="hex1 bg1">
-        <img src="../images/courses/heximg1.png" alt="" />
-        <div class="hexBox">
-          <h1 class="hexTitle">REPEATERS</h1>
+        <img src="../images/courses/heximg11.png" alt="" />
+        <div class="hexBox hexBox2">
+          <h1 class="hexTitle">Two-year course</h1>
           <p class="hexContent">
-            This course is meant for those who have completed their 12th class
-            board exams and might have already attempted the NEET. They will
-            appear for NEET in the coming year after one year of training
-            focused on NEET.
+            This course is meant for students who have completed their 10th std board exams. The course will start at their 11th std and will be conducted till their JEE exam.
+Course Methodology
+
           </p>
           <button class="neet1btn">Read more</button>
         </div>
@@ -166,42 +171,25 @@
     </section>
     <section class="hexMain">
       <div class="hex1 hex2 bg2">
-        <img src="../images/courses/heximg11.png" alt="" />
-        <div class="hexBox hexBox2">
-          <h1 class="hexTitle">Two-year course</h1>
+        <img src="../images/courses/heximg2.png" alt="" />
+        <div class="hexBox">
+          <h1 class="hexTitle">One-year course</h1>
           <p class="hexContent">
-            This course is meant for students who have completed their 10th std
-            board exams. The course will start at their 11th std and will be
-            conducted till their NEET exam. Course Methodology
+            The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams.
           </p>
           <button class="neet2btn">Read more</button>
         </div>
       </div>
     </section>
     <section class="hexMain">
-      <div class="hex1 bg3">
-        <img src="../images/courses/heximg2.png" alt="" />
-        <div class="hexBox">
-          <h1 class="hexTitle">One-year course</h1>
-          <p class="hexContent">
-            The course is specifically designed for those who wish to focus on
-            NEET after completing their 11th class exams.
-          </p>
-          <button class="neet3btn">Read more</button>
-        </div>
-      </div>
-    </section>
-    <section class="hexMain">
-      <div class="hex1 hex2 bg2">
+      <div class="hex1  bg3">
         <img src="../images/courses/heximg3.png" alt="" />
         <div class="hexBox hexBox2">
           <h1 class="hexTitle">Crash course</h1>
           <p class="hexContent">
-            This course is meant for those who are appearing for their 12th
-            class board exams and wish to focus on NEET after the Board exams.
-            These students will be attempting NEET the same year.
+            This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year.
           </p>
-          <button class="neet4btn">Read more</button>
+          <button class="neet3btn">Read more</button>
         </div>
       </div>
     </section>
