--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -43,6 +43,18 @@
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
           </svg></span>Exam tips and tricks, Motivational Sessions</li>
+
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Study Materials- 72</li>
+
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Solution Booklets-72</li>
+
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Concept Capsules- 6</li>
         </ul>
       </div>
     </section>
@@ -128,6 +140,50 @@
         </ul>
       </div>
     </section>
+    <section class="bgmeth4">
+      <div class="methodology4">
+        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <h1>Course Methodology</h1>
+        <ul>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
+          <li>
+            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
+          </li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Solution booklets for problems in Study Material Books</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Interactive Doubt clearing sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Problem solving session for each units</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Concept Capsules</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Study Materials- 15</li>
+        
+        </ul>
+      </div>
+    </section>
 
     <%- include('./layout/header') %>
 
@@ -155,10 +211,7 @@
         <div class="hexBox">
           <h1 class="hexTitle">REPEATERS</h1>
           <p class="hexContent para1neet">
-            This course is meant for those who have completed their 12th class
-            board exams and might have already attempted the NEET. They will
-            appear for NEET in the coming year after one year of training
-            focused on NEET.
+            his course is meant for those who have completed their 12th class board exams and might have already attempted the NEET. They will appear for NEET in the coming year after one year of training focused on NEET.
           </p>
           <button class="neet1btn">Read more</button>
         </div>
@@ -170,9 +223,8 @@
         <div class="hexBox hexBox2">
           <h1 class="hexTitle">Two-year course</h1>
           <p class="hexContent para2neet">
-            This course is meant for students who have completed their 10th std
-            board exams. The course will start at their 11th std and will be
-            conducted till their NEET exam. Course Methodology
+            This course is meant for students who have completed their 10th std board exams. The course will start at their 11th std and will be conducted till their NEET exam. Course Methodology
+
           </p>
           <button class="neet2btn">Read more</button>
         </div>
@@ -184,8 +236,7 @@
         <div class="hexBox">
           <h1 class="hexTitle">One-year course</h1>
           <p class="hexContent para3neet">
-            The course is specifically designed for those who wish to focus on
-            NEET after completing their 11th class exams.
+            The course is specifically designed for those who wish to focus on NEET after completing their 11th class exams.
           </p>
           <button class="neet3btn">Read more</button>
         </div>
@@ -197,9 +248,7 @@
         <div class="hexBox hexBox2">
           <h1 class="hexTitle">Crash course</h1>
           <p class="hexContent para4neet">
-            This course is meant for those who are appearing for their 12th
-            class board exams and wish to focus on NEET after the Board exams.
-            These students will be attempting NEET the same year.
+            This course is meant for those who are appearing for their 12th class board exams and wish to focus on NEET after the Board exams. These students will be attempting NEET the same year.
           </p>
           <button class="neet4btn">Read more</button>
         </div>
