--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap');
+
 .video {
   width: 100%;
   height: 100vh;
@@ -90,6 +92,7 @@
   flex-direction: column;
   width: 100%;
   height: 107vh;
+  font-family: 'Inconsolata', monospace;
 }
 
 .timeline h1 {
