--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -57,24 +57,28 @@
         <h1>Our Journey So Far</h1>
         <img src="../images/aboutus/group19.png" class="book" alt="" />
         <div class="cards1">
+          
           <p>
-          Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya Priyadharshini for securing NEET first mark in Salem Region in NEET 2020.
+            <span ><img  src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/64/000000/external-doctor-medical-itim2101-lineal-color-itim2101-2.png"/></span>
+            <span><img class="do" src="../images/aboutus/dot2.png"/></span>48 Students got MBBS SEATS through Govt Quota in Tamilnadu Medical Counselling 2017.
           </p>
         </div>
         <div class="cards2">
           <p>
-            Salem District Collector Mrs. Rohini has honoured our Student Ms.Elakkiya G for securing NEET first mark in Salem Region in NEET 2019.
+            <span ><img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-trophy-reward-and-badges-justicon-flat-justicon-1.png"/></span>
+            <span><img class="do" src="../images/aboutus/dot2.png"/></span>Salem District CEO Mrs. Gnanagowri has honoured our Student Mr.Sarathkumar for securing NEET first mark in Salem Region in NEET 2018.
           </p>
         </div>
         <div class="cards3">
           <p>
-            Salem District CEO Mrs. Gnanagowri has honoured our Student Mr.Sarathkumar for securing NEET first mark in Salem Region in NEET 2018.
-            
+            <span><img src="https://img.icons8.com/color/64/000000/student-female.png"/></span>
+            <span><img class="do" src="../images/aboutus/dot2.png"/></span>Salem District Collector Mrs. Rohini has honoured our Student Ms.Elakkiya G for securing NEET first mark in Salem Region in NEET 2019.
           </p>
         </div>
         <div class="cards4">
           <p>
-            48 Students got MBBS SEATS through Govt Quota in Tamilnadu Medical Counselling 2017.
+            <span><img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-first-success-flatart-icons-flat-flatarticons.png"/></span>
+            <span><img class="do" src="../images/aboutus/dot2.png"/></span>Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya Priyadharshini for securing NEET first mark in Salem Region in NEET 2020.
           </p>
         </div>
       </section>
