--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -66,7 +66,7 @@
         <div class="collapse" id="results-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
             <li><a href="/admin/results/images" class="link-dark rounded ahover">Images</a></li>
-            <li><a href="/admin/courses/neet" class="link-dark rounded ahover">Studdent Details</a></li>
+            <li><a href="/admin/results/studentdetails" class="link-dark rounded ahover">Studdent Details</a></li>
           </ul>
         </div>
       </li>
