--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -117,5 +117,6 @@
 		</section>
 		<%- include('./layout/footer') %>
 		<script src="javascripts/contactus.js"></script>
+		<script src="javascripts/common.js"></script>
 	</body>
 </html>
