--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 * {
   box-sizing: border-box;
   padding: 0%;
@@ -13,7 +14,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Roboto", sans-serif !important;
+  font-family: "Roboto", sans-serif ;
 }
 
 /* NavBar */
@@ -131,21 +132,23 @@ ul {
   }
   .navlinks {
     position: absolute;
-    right: 0px;
+    left: 100%;
     height: 95vh;
-    top: 8vh;
+    top: 10vh;
     background: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     z-index: 30;
     width: 50%;
-    transform: translatex(100%);
-    transition: transform 0.5s ease-in;
+    transition: left .5s ease-in;
     
   }
-}
-@media screen and (max-width: 895px) {
+
+
+  .body {
+    overflow-y: hidden;
+  }
   body {
     overflow-x: hidden;
   }
@@ -158,7 +161,8 @@ ul {
 }
 
 .nav-active {
-  transform: translateX(0%);
+ left: 50% !important;
+ transition: left .5s ease-in;
 }
 
 footer {
@@ -322,7 +326,7 @@ footer {
     margin-top: 5%;
   }
   .navlinks {
-    display: none;
+    /* display: none; */
   }
 }
 @media (max-width: 400px) {
