--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -59,26 +59,30 @@
         <div class="cards1">
           
           <p>
-            <span ><img  src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/64/000000/external-doctor-medical-itim2101-lineal-color-itim2101-2.png"/></span>
-            <span><img class="do" src="../images/aboutus/dot2.png"/></span>48 Students got MBBS SEATS through Govt Quota in Tamilnadu Medical Counselling 2017.
+            <span  class="span"><img  src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/64/000000/external-doctor-medical-itim2101-lineal-color-itim2101-2.png"/></span>
+            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
+            <span>48 Students got MBBS SEATS through Govt Quota in Tamilnadu Medical Counselling <span style=color:red> 2017</span></span> 
           </p>
         </div>
         <div class="cards2">
           <p>
-            <span ><img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-trophy-reward-and-badges-justicon-flat-justicon-1.png"/></span>
-            <span><img class="do" src="../images/aboutus/dot2.png"/></span>Salem District CEO Mrs. Gnanagowri has honoured our Student Mr.Sarathkumar for securing NEET first mark in Salem Region in NEET 2018.
+            <span  class="span"><img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-trophy-reward-and-badges-justicon-flat-justicon-1.png"/></span>
+            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
+            <span>Salem District CEO Mrs. Gnanagowri has honoured our Student Mr.Sarathkumar for securing NEET first mark in Salem Region in NEET <span style=color:red> 2018</span></span> 
           </p>
         </div>
         <div class="cards3">
           <p>
-            <span><img src="https://img.icons8.com/color/64/000000/student-female.png"/></span>
-            <span><img class="do" src="../images/aboutus/dot2.png"/></span>Salem District Collector Mrs. Rohini has honoured our Student Ms.Elakkiya G for securing NEET first mark in Salem Region in NEET 2019.
+            <span class="span"><img src="https://img.icons8.com/color/64/000000/student-female.png"/></span>
+            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
+            <span> Salem District Collector Mrs. Rohini has honoured our Student Ms.Elakkiya G for securing NEET first mark in Salem Region in NEET <span style=color:red> 2019</span></span>
           </p>
         </div>
         <div class="cards4">
           <p>
-            <span><img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-first-success-flatart-icons-flat-flatarticons.png"/></span>
-            <span><img class="do" src="../images/aboutus/dot2.png"/></span>Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya Priyadharshini for securing NEET first mark in Salem Region in NEET 2020.
+            <span class="span"><img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-first-success-flatart-icons-flat-flatarticons.png"/></span>
+            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
+            <span> Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya Priyadharshini for securing NEET first mark in Salem Region in NEET <span style=color:red> 2020</span>.</span>
           </p>
         </div>
       </section>
@@ -90,9 +94,11 @@
         <img src="images/aboutus/Vector1.png" class="Vector2">
         <img src="images/aboutus/Vector.png" class="vector1" >
         <a href="https://play.google.com/store/apps/details?id=eduapplet.classicneet" ><img src="images/aboutus/download.jpg" /></a>
+
       
       </div>
     </section>
+    <script src="javascripts/common.js"></script>
     <%- include('./layout/footer') %>
   </body>
 </html>
