--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -211,7 +211,7 @@
         <div class="hexBox">
           <h1 class="hexTitle">REPEATERS</h1>
           <p class="hexContent para1neet">
-            his course is meant for those who have completed their 12th class board exams and might have already attempted the NEET. They will appear for NEET in the coming year after one year of training focused on NEET.
+            this course is meant for those who have completed their 12th class board exams and might have already attempted the NEET. They will appear for NEET in the coming year after one year of training focused on NEET.
           </p>
           <button class="neet1btn">Read more</button>
         </div>
@@ -259,6 +259,6 @@
 
     <%- include('./layout/footer') %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="../javascripts/courses.js"></script>
+    <script src="javascripts/common.js"></script>
   </body>
 </html>
